- in expression simplification, added possibility to allow expanding power of products with fractional exponent (simplify rule POW5a)
- Can now build with Lapack (used for solving nonlinear problems). If IPOPT is used, then Lapack is accessed through it.
  There	is an interface to Lapack in lapack_calls.

Performance improvements
------------------------

- Variable conflict-based addition of Schreier-Sims cuts for symmetry handling in prop_symmetry.c does no longer use
  an expensive explicit conflict graph construction.

Examples and applications
-------------------------

Interface changes
-----------------

### New and changed callbacks

### Deleted and changed API methods

- SCIPtpiInitLock(), SCIPtpiDestroyLock(), SCIPtpiInitCondition(), SCIPtpiDestroyCondition() now take a double
  pointer to SCIP_LOCK/SCIP_CONDITION, respectively.

- Renamed SCIPtpiSumbitJob() to SCIPtpiSubmitJob().

### New API functions

- new functions for interfacing with Lapack:
  SCIPlapackIsAvailable(), SCIPlapackIsAvailable(),
  SCIPlapackComputeEigenvalues(), and SCIPlapackSolveLinearEquations

  These functions should be used instead of SCIPisIpoptAvailableIpopt(), SCIPcallLapackDsyevIpopt(), and
  SCIPsolveLinearEquationsIpopt() in the context of computing eigenvalues or solving linear equations. If IPOPT is available,
  the calls will be passed on.
- SCIPmultiplyBySumExprSum(), SCIPpowerExprSum()

### Command line interface

- Added optional parameter -i when calling SCIP in AMPL-mode (-AMPL parameter).
  If -i is specified, a SCIP shell is started where normally SCIPsolve() would be called.

### Interfaces to external software

- Added interface to Lapack (used for solving nonlinear problems).

### Changed parameters

- Shrunk range of parameter "propagating/symmetry/sstleaderrule" from [0,3] to [0,2], removed "MAXCONFLICTS"-option.

### New parameters

- expr/pow/expandmaxexponent to specify limit on exponent when to expand power of sum