@@ -12,6 +12,7 @@ Features
 - in expression simplification, added possibility to allow expanding power of products with fractional exponent (simplify rule POW5a)
 - Can now build with Lapack (used for solving nonlinear problems). If IPOPT is used, then Lapack is accessed through it.
   There	is an interface to Lapack in lapack_calls.
+- added support for logical constraints in binary variables and basic logical operators (and, or, not, equal) to AMPL .nl reader
 
 Performance improvements
 ------------------------
